# nasp-lab-2020

./: .gitignore
lab01/: meson.build
lab01/include/nasp/rb/: node.hpp  tree.hpp
lab01/src/: main.cpp
lab01/tst/include/nasp/rb/properties/: properties.hpp
lab01/tst/src/: main.cpp
